k8s/mongodb-k8s/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: data-base
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
